# DeepSide

./: .env.example  .gitignore  README.md  index.html  map.html  package-lock.json  package.json
scripts/: install_npcap.ps1
src/: main.ts  map.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs  onnx.rs
src-tauri/src/core/: arp.rs  banner.rs  capture.rs  config.rs  dns.rs  export.rs  geoip.rs  mod.rs  phishing.rs  session.rs  shodan.rs  sniffer.rs  ssl.rs  threatintel.rs  threats.rs  tools.rs  traceroute.rs  virustotal.rs  vulnscan.rs  watch.rs  whois.rs
src-tauri/src/models/: monitor.rs
src-tauri/src/proxy/: ca.rs  server.rs
