[package]
name = "deepside"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "deepside"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deepside_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
pcap = "1.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
rcgen = "0.11.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
tokio-rustls = "0.26.4"
rustls = "0.23.36"
http-body-util = "0.1.3"
bytes = "1.11.1"
tower-service = "0.3.3"
hyper-rustls = { version = "0.27.7", features = ["rustls-native-certs", "http1", "http2", "tls12", "logging"] }
reqwest = { version = "0.12", features = ["json"] }
etherparse = "0.13.0"
mac_address = "1.1.5"
maxminddb = "0.23.0"
whois-rust = "1.5.1"
strsim = "0.11.1"
url = "2.5.8"
once_cell = "1.19"
urlencoding = "2.1"
# AI & ML
# AI & ML
ort = { version = "2.0.0-rc.11", features = ["load-dynamic", "ndarray"] }
tokenizers = "0.19"
ndarray = "0.15"
printpdf = "0.7"
windows-sys = { version = "0.61.2", features = ["Win32_System_LibraryLoader", "Win32_Foundation"] }
